manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-coolstore
  namespace: test-single-pod
  labels:
    app: web-coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-coolstore
  template:
    metadata:
      labels:
        app: web-coolstore
    spec:
      containers:
        - name: catalog
          image: quay.io/rh-ee-yuewu/catalog-spring-boot:v2.0.1
          ports:
            - containerPort: 9000
              protocol: TCP
          resources: {}
        - name: inventory
          image: quay.io/rh-ee-yuewu/inventory-quarkus:v2.0.1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
        - name: gateway
          image: quay.io/rh-ee-yuewu/gateway-vertx:v2.0.1
          ports:
            - containerPort: 9090
              protocol: TCP
          resources: {}
        - name: web
          image: quay.io/rh-ee-yuewu/web-nodejs:v2.0.3
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
