manifest/route-gateway.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway
  namespace: test-single-pod
spec:
  to:
    kind: Service
    name: gateway
  port:
    targetPort: gateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
