manifest/route-web.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web
  namespace: test-single-pod
spec:
  to:
    kind: Service
    name: web
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
